Product logics completed

--- a/ECom.API/appsettings.Development.json
+++ b/ECom.API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Initial Catalog=ECommerce;Persist Security Info=False;User ID=sa;Password=Aliyetking__44;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
