--- a/ECom.API/ECom.API.csproj
+++ b/ECom.API/ECom.API.csproj
@@ -9,6 +9,10 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
@@ -18,7 +22,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
+      <ProjectReference Include="..\ECom.Application\ECom.Application.csproj" />
+      <ProjectReference Include="..\ECom.Infrastructure\ECom.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
