--- a/ECom.API/appsettings.json
+++ b/ECom.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Initial Catalog=ECommerce;Persist Security Info=False;User ID=sa;Password=Aliyetking__44;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=localhost,1432;Initial Catalog=ECommerce;Persist Security Info=False;User ID=sa;Password=DatabaseSAParolasi__44!;TrustServerCertificate=True;MultipleActiveResultSets=True;"
   },
   
   "Logging": {
