Appsettings use env file and add project infos

--- a/ECom.API/appsettings.Development.json
+++ b/ECom.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1432;Initial Catalog=ECommerce;Persist Security Info=False;User ID=sa;Password=DatabaseSAParolasi__44!;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=localhost,{ENV_MSSQL_PORT};Initial Catalog=ECommerce;Persist Security Info=False;User ID=sa;Password={ENV_SA_PASSWORD};TrustServerCertificate=True;MultipleActiveResultSets=True;"
   },
   
   "Logging": {
